--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "npm run test:unit && npm run test:e2e",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:unit": "jest --config ./jest-unit.json",
