--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push",
-    "test:cov": "jest --config ./jest.json --coverage --silent --runInBand",
+    "test:cov": "jest --config ./jest-all.json --coverage --silent --runInBand",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:unit": "jest --config ./jest-unit.json",
     "test:e2e": "jest --config ./jest-e2e.json --silent --runInBand"
